###############################################################################
#
# Description       : CMake build script for the native liblax tests
  
###############################################################################
#
# Build test files and add tests
# 
if(WITH_CHECK)

  add_subdirectory(test)

endif()

